[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resume-screening-openenv"
version = "1.0.0"
description = "An OpenEnv-compliant environment for AI-driven resume screening and hiring decisions."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "httpx==0.27.0",
]

[project.scripts]
serve = "server:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = [
    "server",
    "env",
    "models",
    "tasks",
    "grader",
    "inference",
]
